--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "csv-writer": "^1.2.0",
     "mkdirp": "^0.5.1",
+    "moment": "^2.24.0",
     "puppeteer": "^1.14.0"
   }
 }
